k8s/deployment.yaml
# Deploy do postgre
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgre
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: postgre
  template:
    metadata:
      labels:
        app: postgre
    spec:
      containers:
        - name: postgre
          image: postgres:13.1
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgre
spec: 
  selector:
    app: postgre
  ports:
    - port: 5432
---
# Deploy da Aplicação Web
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviewfilmes
spec: 
  replicas: 1
  selector:
    matchLabels: 
      app: reviewfilmes
  template:
    metadata:
      labels:
        app: reviewfilmes
    spec:
      containers:
        - name: reviewfilmes
          image: fabricioveronez/live-azure-devops
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: reviewfilmes
spec: 
  selector:
    app: reviewfilmes
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reviewfilmes-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: az-devops.34.71.60.32.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: reviewfilmes
                port:
                  number: 80
